<resources>
    <string name="app_name">Introvert</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Main menu strings -->
    <string name="menu_main_add_note">Add note</string>
    <string name="menu_main_add_note_text">Text</string>
    <string name="menu_main_add_note_audio">Audio</string>
    <string name="menu_main_preferences">Preferences</string>

    <!-- Main preferences strings -->
    <string name="preferences_main_category_editors">Editors</string>
    <string name="preferences_main_text_editor">Text editor</string>
    <string name="preferences_main_audio_editor">Audio editor</string>
    <string name="preferences_main_category_debug">Debug</string>
    <string name="preferences_main_debug_mode">Debug mode</string>
    <string name="preferences_main_debug_mode_summary">Debug mode activates ability to debug
        application. For example, you can dump tables. </string>
    <string name="preferences_main_dump_table">Dump table</string>
    <string name="preferences_main_dump_table_dialog">Choose a table to dump.</string>
    <string name="preferences_main_category_other">Other</string>
    <string name="preferences_main_open_webpage">Go to Internet</string>
    <string name="preferences_main_notification_sound">Notification sound</string>
    <string name="preferences_main_notification_sound_dialog">Choose notification sound</string>
    <string name="preferences_main_category_export">Export</string>
    <string name="preferences_main_export_notes">Export notes</string>
    <string name="preferences_main_notes_location">Notes location</string>
    <string name="preferences_main_text_notes_location">Text notes location</string>
    <string name="preferences_main_audio_notes_location">Audio notes location</string>
    <!-- Audio editor (preferences)-->
    <string name="preferences_main_audio_editor_auto_record">Start recording automatically on
        open</string>
    <string name="preferences_main_audio_editor_audio_source">Audio source</string>
    <string name="preferences_main_audio_editor_output_format">Output format</string>
    <string name="preferences_main_audio_editor_audio_encoder">Audio encoder</string>

    <!-- Audio editor -->
    <string name="audio_editor_button_play">Play</string>
    <string name="audio_editor_button_pause">Pause</string>
    <string name="audio_editor_button_stop">Stop</string>
    <string name="audio_editor_button_rec">Rec</string>
    <string name="audio_editor_empty_tv_recording">Recording…</string>
    <string name="audio_editor_empty_tv_press_record">Press Rec to start recording</string>
</resources>
