<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_main_category_other">
        <!-- "Go to Internet" option -->
        <Preference android:title="@string/preferences_main_open_webpage">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.google.com" />
        </Preference>
        <!-- "Notification sound" option -->
        <RingtonePreference
            android:key="preferences_main_notification_sound"
            android:ringtoneType="notification"
            android:showSilent="true"
            android:title="@string/preferences_main_notification_sound" />
    </PreferenceCategory>
</PreferenceScreen>